fixed few alignments

--- a/client/src/components/shopBy/ShopBy.module.css
+++ b/client/src/components/shopBy/ShopBy.module.css
@@ -103,6 +103,7 @@
 }
 .shopByContainer .texts h1 {
   font-size: 3em;
+  text-align: center;
   margin-bottom: 0;
 }
 .shopByContainer .texts ul {
